<resources>
    <string name="app_name" translatable="false">PurchaseTracking</string>

    <!--    PRODUCT'S LIST-->
    <string name="content_description_fab_add_purchase">Add purchase</string>
    <string name="content_description_search_button">Search button</string>
    <string name="empty_products_list">No products founded. \nTap here to reload</string>
    <string name="title_products">Products</string>
    <string name="content_description_menu_product">Product options menu</string>
    <string name="last_purchase_price">Last purch. price:</string>

    <string name="title_dialog_permission_camera">Required Permissions</string>
    <string name="message_dialog_permission_camera">To scan the product\'s barcode you must be allow the camera permission</string>
    <string name="button_positive_text_dialog_permission">Allow</string>
    <string name="button_negative_text_dialog_permission">Deny</string>

    <!--    PRODUCT INFO-->
    <string name="title_product">Product</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_description">Description</string>
    <string name="hint_product_brand">Brand</string>
    <string name="hint_product_barcode">Barcode</string>
    <string name="hint_product_note">Note</string>

    <!--    PURCHASE INFO-->
    <string name="title_purchase">Purchase</string>
    <string name="hint_purchase_total">Total</string>
    <string name="hint_purchase_quantity">Quantity</string>
    <string name="title_purchase_had_discount">Had a discount?</string>
    <string name="hint_purchase_market">Market</string>
    <string name="hint_purchase_date">Date</string>
    <string name="hint_purchase_note">Note</string>

    <string name="save_product_purchase">Save</string>


    <!--    ERRORS ADD PURCHASE-->
    <string name="error_product_name_required">The products name is required</string>
    <string name="error_product_barcode_required">The products barcode is required</string>
    <string name="error_purchase_total_required">The purchases total is required</string>
    <string name="error_purchase_total_negative">Total must be major than zero</string>
    <string name="error_purchase_quantity_required">The purchases quantity is required</string>
    <string name="error_purchase_quantity_negative">Quantity must be major than zero</string>
    <string name="error_purchase_date_required">The purchases date is required</string>
    <string name="product_not_founded">Product not found, complete the form to save it</string>

    <string name="purchase_saved_successfully">Compra guardada exitosamente</string>


</resources>