<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.purchase.PurchaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <TextView
            style="@style/Title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_product" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corners"
            android:backgroundTint="@color/background_2"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="Autofill">

            <EditText
                android:id="@+id/et_product_name"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:layout_marginTop="0dp"
                android:hint="@string/hint_product_name"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/et_product_description"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_product_description"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_product_brand"
                android:textColorHint="@color/hint_edittext_form"
                app:endIconTint="@color/hint_edittext_form">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/atv_product_brand"
                    style="@style/EditText_form"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text_form"
                    android:layout_marginTop="0dp"
                    android:inputType="textCapSentences"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_product_barcode"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_product_barcode"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/et_product_note"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_product_note"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <ImageButton
                android:id="@+id/ib_action_product_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_et_form"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_up"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <!--        PURCHASES INFO-->

        <TextView
            style="@style/Title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_purchase" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corners"
            android:backgroundTint="@color/background_2"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="Autofill">

            <EditText
                android:id="@+id/et_purchase_total"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:layout_marginTop="0dp"
                android:hint="@string/hint_purchase_total"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/et_purchase_quantity"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_purchase_quantity"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <CheckBox
                android:id="@+id/cb_purchase_had_discount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:layout_marginTop="@dimen/margin_top_et_form"
                android:hint="@string/hint_product_brand"
                android:text="@string/title_purchase_had_discount"
                android:textColor="@color/text_color_primary" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_purchase_market"
                android:textColorHint="@color/hint_edittext_form"
                app:endIconTint="@color/hint_edittext_form">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/atv_purchase_market"
                    style="@style/EditText_form"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text_form"
                    android:layout_marginTop="0dp"
                    android:inputType="textCapSentences"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_purchase_date"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_purchase_date"
                android:inputType="date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/et_purchase_note"
                style="@style/EditText_form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text_form"
                android:hint="@string/hint_purchase_note"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <ImageButton
                android:id="@+id/ib_action_purchase_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_et_form"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_up"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_product_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/accent"
            android:text="@string/save_product_purchase"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>